refactor(paes): remove matingPoolSize from PAESSelection and add meta-problem IT
PAESSelection no longer accepts matingPoolSize: PAES is a (1+1)ES so the
selection always returns exactly one solution. BasePAES.createSelection()
is updated accordingly.

PAESForDTLZ1Example updated with the best DTLZ-trained configuration.

PAESMetaOptimizationIT verifies that DoublePAES and PermutationPAES work
as base-level algorithms in both MetaOptimizationProblem (flat encoding)
and TreeMetaOptimizationProblem (derivation tree encoding).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>